# ChinaTelecomDetNetDemo

./: .gitignore  README.md  hping3_script.sh
controller/: README.md  config.toml  example_config.toml  int_main.py  main.py  pyproject.toml  schedule_main.py  start.sh
controller/src/: 0321网络结构.sql  config.py  orm.py  receive_for_INT_insert_sgwlinkstate  网络拓扑.sql
controller/src/app/: engine.py  main.py  read_db.py  traffic_class_mapping.py  utils.py
controller/src/cpe_table/: __init__.py  __main__.py  db_reader.py  read_db.py  select_srv6_path.py  select_srv6_path_without_qos.py  select_traffic_class.py  send_bfrt_python.py  srv6_drop.py  utils.py
controller/src/int/: __main__.py  headers_definition.py  readme  receive.py  receive_database_INT.py  send.py  交换机的P4代码，支持INT和SRV6转发
controller/src/int/project_INT/: network.py  readme.txt  receive_4.py  s3-commands.txt  send_INT_5.py  send_normal100.py
controller/src/int/test/: readme.txt  s2-commands.txt  start_end.p4
controller/src/int/tofino_srv6/: README.md  readme
controller/src/schedule/: README.md  __init__.py  __main__.py  db_reader.py  get_routing.py  main.py  update_table.py  util.py
controller/tests/: test_add_flow_table.py
cpe/: README.md  download.sh  run_p4.sh  run_setup.sh  setup.py  srv6.p4  srv6_0319.p4  srv6_insert.p4  srv6_tofino.p4  start.sh  实验配置.txt
docs/: 2024年工作计划.md  分工(旧).md  实验拓扑.vsdx  实验拓扑1.vsdx
schedule/: README.md  config.toml  pyproject.toml  start.sh
schedule/src/: addpath.sql  orm.py
schedule/src/cpe_table/: __main__.py
schedule/src/p4_command_controller/: mac_address.py  p4_switch.py  tofino.py
schedule/src/schedule/: __main__.py  get_data.py  multipath_algorithm.py  util.py
sgw/: 182-for_srv6.txt  int.p4  readme
version 1/controller/: pyproject.toml
version 3/: 测试指令.md
(+209 files in other folders)
