#这玩意是pdm用的，为了方便后续移植提前做一下依赖管理。如果不想用可以忽略
[project]
name = "schedule"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Wang Xinyu", email = "hi_wangxinyu@163.com"},
]
dependencies = [
    "FastAPI>=0.111.0",
    "sqlmodel>=0.0.18",
    "pandas>=2.2.2",
    "netaddr>=1.2.1",
    "pydantic-extra-types>=2.7.0",
    "toml>=0.10.2",
    "invoke>=2.2.0",
    "fabric>=3.2.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.pdm.scripts]
create_table = "python ./src/orm.py"
start = "python -m src.schedule"

[tool.pdm]
distribution = false
